[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "calicost"
version = "1.0.0"
authors = [
  "Cong Ma <congma@princeton.edu>",
  "Metin Balaban <metin@princeton.edu>",
  "Jingxian Liu <jingxian.liu@wustl.edu>",
  "Siqi Chen <siqichen@wustl.edu>",
  "Li Ding <lding@wustl.edu>",
  "Ben Raphael <braphael@cs.princeton.edu>",
]
description = "Inferring allele-specific copy number aberrations and tumor phylogeography from spatially resolved transcriptomics"
readme = "README.md"
homepage = "https://github.com/raphael-group/CalicoST"
repository = "https://github.com/raphael-group/CalicoST"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "calicost", from = "python"},
]

[tool.poetry.scripts]
calicost = "calicost.cli.calicost:main"
parse_input = "calicost.cli.parse_input:main"
merge_bamfile = "calicost.cli.merge_bamfile:main"
filter_snps_forphasing = "calicost.cli.filter_snps_forphasing:main"
get_snp_matrix = "calicost.cli.get_snp_matrix:main"

# TODO requires-python = ">=3.8"
[tool.poetry.dependencies]
numpy = "1.24.4"
scipy = "1.11.3"
pandas = "2.1.1"
scikit-learn = "1.3.2"
scanpy = "1.9.6"
anndata = "0.10.3"

# [tool.poetry.group.analysis.dependencies]
# "matplotlib",
# "seaborn"